# systems_meet_ai_hackaton

./: README.md  build-clean.sh  build-flash-task1.sh  build-flash-task2.sh  build-flash-task3.sh  build-flash-task4.sh  build-flash.sh  pyproject.toml  requirements.txt
.build/pico-tflmicro/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: train_clean_3x3_1cm.csv  train_clean_6x6_8cm.csv  validation_clean_3x3_1cm.csv  validation_clean_6x6_8cm.csv  validation_raw_3x3_1cm.csv
data/hidden/: test_clean_3x3_1cm.csv.aesgcm  test_clean_6x6_8cm.csv.aesgcm  test_raw_3x3_1cm.csv.aesgcm
firmware/: build_firmware.sh
firmware/vlp_serial/: CMakeLists.txt  main.cpp  model_data.cc  model_data.h  preprocess_data.h  target_scale_data.h  vlp_model.tflite
host/: check_dataset.py  run_submission.py
models/: baseline_task1.pt  baseline_task1.tflite  baseline_task1_int8.pt  baseline_task1_int8.tflite  baseline_task1_int8_scaling.npz  baseline_task1_scaling.npz  baseline_task3.pt  baseline_task3.tflite  baseline_task3_scaling.npz  best_task1.pt  task1.pt
notebooks/: baseline_vlp.ipynb  baseline_vlp_int8.ipynb  helpers.py  hyperparameter_search.ipynb  hyperparameter_search_task3.ipynb  trail_1.db  trail_1_no_norm.db  trail_3.db  trail_3_no_layernorm.db
notebooks/.ipynb_checkpoints/: hyperparameter_search-checkpoint.ipynb  (+1 more)
scripts/: export_litert_baseline.py  export_litert_baseline_task3.py  export_litert_int8_baseline.py  tflite_to_c.py
vlp_hackathon/: __init__.py  aging.py  baseline_model.py  dataset.py  export.py  improved_model.py  metrics.py  protocol.py  security.py
(+490 files in other folders)
