[project]
name = "vlc-hackaton"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.4,<2.2",
    "cryptography>=44.0",
    "jupyter>=1.0",
    "litert-torch==0.9.0",
    "matplotlib>=3.8",
    "nbconvert>=7.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyserial>=3.5",
    "pytest>=8.0",
    "torch>=2.11,<2.12",
]
